fix: resolve security vulnerabilities   and harden configuration